@@ -1,5 +1,5 @@
 name             = Dist-Zilla-PluginBundle-Author-CHIM
-version          = 0.02_01
+version          = 0.03
 author           = Anton Gerasimov <chim@cpan.org>
 license          = Perl_5
 copyright_holder = Anton Gerasimov
@@ -10,7 +10,7 @@ main_module      = lib/Dist/Zilla/PluginBundle/Author/CHIM.pm
 dist = Dist-Zilla-PluginBundle-Author-CHIM
 
 [ModuleShareDirs]
-Dist::Zilla::MintingProfile::CHIM = profiles
+Dist::Zilla::MintingProfile::Author::CHIM = profiles
 
 [Prereqs]
 perl                                        = 5.010001
