@@ -19,8 +19,6 @@ __END__
 
 =encoding utf8
 
-=for Pod::Coverage
-
 =head1 SYNOPSYS
 
 =head1 DESCRIPTION
