@@ -1,18 +1,0 @@
-dev/
-blib/
-.build/
-_build/
-cover_db/
-inc/
-Build
-!Build/
-Build.bat
-.last_cover_stats
-Makefile
-Makefile.old
-MANIFEST.bak
-META.*
-MYMETA.*
-nytprof.out
-pm_to_blib
-{{ $dist->name }}-*
