@@ -1,16 +1,0 @@
-language: perl
-
-perl:
-    - "5.16"
-    - "5.14"
-    - "5.12"
-    - "5.10"
-
-before_install:
-    - "cpanm -q -n Dist::Zilla::PluginBundle::Author::CHIM"
-
-install:
-    - "dzil authordeps | xargs cpanm -q -n && dzil listdeps | xargs cpanm -q -n"
-
-script:
-    - "dzil test --release"
