@@ -1,6 +1,6 @@
 {{
     $main_module = $dist->name;
-    $main_module =~ s|::|\/|g;
+    $main_module =~ s|-|\/|g;
     $license = ref $dist->license;
     if ($license =~ /^Software::License::(.+)$/) {
         $license = $1;
