@@ -1,4 +1,4 @@
-Revision history for Perl extension {{ $dist->name }}
+Revision history for Perl extension {{ $_ = $dist->name; s|-|::|g; $_ }}
 
 {{ "{{\$NEXT}}" }}
     - initial commit/release
