@@ -1,6 +1,7 @@
 Revision history for Perl extension Dist::Zilla::PluginBundle::Author::CHIM
 
 {{$NEXT}}
+    - added basic minting profile
 
 0.02    Wed Mar 20 15:56:30 2013 +0000
     - updated prerequisites
